# makemake-templates

./: README.md  install-all
C++/c++/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  makemake.json
C++/c++/src/: main.cpp
C++/lvscm++/: Makefile  README.md  makemake.json
C++/lvscm++/src/: lib.cpp  lib.hpp  main.cpp
C++/vscm++/: Makefile  README.md  gitignore_file  makemake.json
C/c/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
C/lvscm/: Makefile  README.md  RM.md  get-deps  gitignore_file  makemake.json
C/lvscm/src/: lib.c  lib.h  main.c
C/vscm/: Makefile  README.md  main.c  makemake.json
C/vscm++/: Makefile  main.cpp  makemake.json
asm/vasm/: Makefile  README.md  main.asm  makemake.json  rw32-2022.inc
latex/latex/: Makefile  document.tex  makemake.json
makemake/mmt/: README.md  RM.md  config.json  makemake.json
rust/rust/: .rustfmt.toml  README.md  RM.md  makemake.json  up.sh
